<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_label"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save"
        android:title="@string/save_label"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="always"/>

</menu>