<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_notes"
        android:title="@string/action_notes_list"
        android:icon="@drawable/ic_list_white_24dp"/>

    <item
        android:id="@+id/action_categories"
        android:title="@string/action_categories_list"
        android:icon="@drawable/ic_dns_white_24dp"/>

</menu>