<resources>
    <string name="app_name">NotesMvp</string>

    <string name="action_notes_list">Notes List</string>
    <string name="action_categories_list">Categories</string>

    <string name="notes_list_title">Notes List</string>
    <string name="empty_list_text">Nothing to show</string>

    <string name="create_note_title">New Note</string>
    <string name="title_hint">Title</string>
    <string name="note_hint">Note</string>
    <string name="empty_note_fields_error">Note title and description should not be empty</string>

    <string name="date_created_title">Created on: %s</string>
    <string name="date_edited_title">Last edited on: %s</string>

    <string name="save_label">Save</string>
    <string name="delete_label">Delete</string>
    <string name="cancel_label">Cancel</string>
    <string name="ok_label">OK</string>

    <string name="note_details_label">Note detail</string>
    <string name="delete_note_confirmation_text">Are you sure you want to delete this note?</string>

    <string name="create_category_title">New Category</string>
    <string name="choose_color_label">Pick color</string>
    <string name="color_format">#%s</string>
    <string name="empty_category_fields_error">Category title should not be empty and color should be selected</string>
</resources>
