<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/title_view"
        style="@style/DefaultText.24sp"
        android:layout_width="0dp"
        android:hint="@string/title_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/color_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="8dp"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:background="@color/white">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/color_view"
            style="@style/DefaultText.24sp"
            android:focusable="false"
            android:background="@color/white"
            android:text="@string/choose_color_label"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>